# AppVerse

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  wheels.yml
docs/: api.md  development.md  getting-started.md  js-bridge.md  packaging.md  platform-support.md
examples/: starter_app.py
scripts/: build.ps1  pull-webview.ps1  run-starter.ps1
src/appverse/: __init__.py
src/native/: pyverse_module.cpp
src/pyverse/: __init__.py
